--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ifc-viewer",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "./src/viewer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c ./rollup.config.mjs",
+    "watch": "rollup -w -c ./rollup.config.mjs"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,7 @@
     "web-ifc-viewer": "^1.0.218"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.0",
     "rollup": "^3.28.0"
   }
 }
