--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ifc-viewer",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/viewer.js",
+  "main": ".viewer.js",
   "scripts": {
     "build": "rollup -c ./rollup.config.mjs",
     "watch": "rollup -w -c ./rollup.config.mjs"
